Fixed z-index

--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -3,7 +3,7 @@
   position: absolute;
   top:60px;
   right: 40px;
-  z-index: 1000;
+  z-index: 998;
 }
 
 main {
